# MadeBySteven

./: $  .env.development  .env.production  .eslintrc.yml  .gitignore  .htaccess  .phpcs.xml  .stylelintrc  .stylelintrc.yml  .travis.yml  CHANGELOG.md  CLAUDE.md  CNAME  COPILOT_INSTRUCTIONS.md  Dockerfile  Makefile  README.md  _redirects  about.html  app.js  bundle-min-stats.html  bundle.min.css  bundle.min.js  compose.yml  composer.json  deployment.yaml  gulpfile.js  index.html  index.php  main.css  main.js  main.js.map  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  project.html  release.config.cjs  rollup.config.js  rollup.config.ts  (+3 more)
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/application/dtos/: contribution_dto.py  contribution_dto_test.py  github_user_dto.py  github_user_dto_test.py  wakapi_dto.py
backend/src/application/use_cases/: fetch_aggregated_contributions.py  fetch_aggregated_stats.py  fetch_aggregated_stats_test.py  fetch_github_contributions.py  fetch_github_contributions_test.py  fetch_github_stats.py  fetch_github_stats_test.py  fetch_github_user.py  fetch_github_user_test.py  fetch_gitlab_contributions.py  fetch_gitlab_contributions_test.py  fetch_wakapi_stats.py
backend/src/domain/entities/: contribution_calendar.py  contribution_calendar_test.py  github_user.py  github_user_test.py
backend/src/domain/repositories/: contribution_repository.py  github_repository.py
backend/src/domain/value_objects/: username.py  (+6 more)
backend/src/infrastructure/: config.py
backend/src/presentation/: container.py
(+246 files in other folders)
